# gllibs

./: .gitignore  CMakeLists.txt
assets/shader/: fragment.glsl  vertex.glsl
src/: test.cpp
src/gls/: glcore.h  mesh.cpp  mesh.h  shader.cpp  shader.h  vertex.cpp  vertex.h
src/nwd/: glwindow.cpp  glwindow.h
